afbeeldingen in een img mapje zetten

--- a/ar/css/style.css
+++ b/ar/css/style.css
@@ -41,7 +41,7 @@
 }
 
 body{
-background-image:url(../Blue-Background-5E3.jpg);
+background-image:url(../img/Blue-Background-5E3.jpg);
 }
 
 .w3-bar .w3-bar-item{
