--- a/css/style.css
+++ b/css/style.css
@@ -39,9 +39,8 @@
 }
 
 body{
-background-image:url(../Blue-Background-5E3.jpg);
+background-image:url(../img/Blue-Background-5E3.jpg);
 }
-
 .w3-bar .w3-bar-item{
 	padding:8px 16px;
 	/*float:left;*/
